linked Firebase...demonstrated adding values from db to app, and app to db.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/burt-macklin-fbi/pinstack-v2#readme",
   "dependencies": {
     "google-maps-react": "^1.1.2",
+    "re-base": "^3.2.2",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-router-dom": "^4.2.2",
