--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
+    "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styles": "stylus -u autoprefixer-stylus ./src/css/style.styl -o ./src/css/style.css",
+    "styles:watch": "stylus -u autoprefixer-stylus -w ./src/css/style.styl -o ./src/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,9 @@
     "react-scripts": "^1.0.17"
   },
   "devDependencies": {
-    "google-maps": "^3.2.1"
+    "autoprefixer-stylus": "^0.14.0",
+    "concurrently": "^3.5.1",
+    "google-maps": "^3.2.1",
+    "stylus": "^0.54.5"
   }
 }
